tests/ui-nightly/transmute-ref-src-not-asbytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: AsBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-asbytes.rs:14:33
   |
14 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 the trait `AsBytes` is not implemented for `NotZerocopy<AU16>`
   |                                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-nightly/transmute-ref-src-not-asbytes.rs:14:33
   |
14 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&NotZerocopy(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `transmute`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
